# CsvSeparator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tox.ini
csvseparator/: __init__.py  main.py  separator.py
in/: sample.csv  sample_complex.csv
notebooks/: explore_csvseparator.ipynb
notebooks/data/: messy_sample.csv
tests/: test_in_out_flow.py
